<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/instructions"
        android:text="@string/instructions"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ImageView
        android:id="@+id/up_arrow"
        android:src="@drawable/up_red_arrow"
        android:contentDescription="@string/up_arrow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/image"
        android:layout_below="@id/instructions" />

    <TextView
        android:id="@+id/up_arrow_text"
        android:text="@string/up_arrow"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/up_arrow" />

    <EditText
        android:id="@+id/guess"
        android:inputType="number"
        android:textSize="36sp"
        android:hint="@string/guess"
        android:textAlignment="center"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/hint_button"
        android:text="@string/show_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:onClick="hint_button_click"/>

    <TextView
        android:id="@+id/hint"
        android:text="@string/hint"
        android:gravity="end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_toRightOf="@id/hint_button"
        android:layout_toEndOf="@id/hint_button"
        android:layout_alignParentBottom="true" />

    <TextView
        android:id="@+id/number_of_guesses"
        android:text="@string/number_of_guesses"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/number"
        android:text="@string/number"
        android:textSize="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/number_of_guesses"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:id="@+id/reset"
        android:text="@string/reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="reset_button_click" />

    <ImageView
        android:id="@+id/down_arrow"
        android:src="@drawable/down_red_arrow"
        android:contentDescription="@string/down_arrow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/image"
        android:layout_above="@id/guess" />

    <TextView
        android:id="@+id/down_arrow_text"
        android:text="@string/down_arrow"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/down_arrow" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:id="@+id/submit_guess"
        android:text="@string/submit_guess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/guess"
        android:layout_centerHorizontal="true"
        android:onClick="click_submit_guess"/>

    <TextView
        android:id="@+id/win"
        android:text="@string/win"
        android:textSize="36sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/guess"
        android:layout_marginBottom="80dp"
        android:layout_centerHorizontal="true" />

</RelativeLayout>